Fixes #37 - Add Bountysource banner on mobile version. Fix for centered side-nav mobile on homepage.

--- a/_assets/css/_generic.scss
+++ b/_assets/css/_generic.scss
@@ -183,7 +183,8 @@ table.no-underline a {
   }
 }
 
-.side-nav {
+.side-nav#nav-mobile {
+  text-align: left !important;
   a {
     font-weight: 400;
     font-size: 20px;
