--- a/_assets/css/_home.scss
+++ b/_assets/css/_home.scss
@@ -206,14 +206,6 @@
     }
   }
 
-  @media only screen and (max-width: 992px) {
-    .btn-flat {
-      display: block;
-      width: 70%;
-      margin-right: 0;
-      margin: 0 auto 1rem !important;
-    }
-  }
 
   #benchmark {
     svg {
@@ -312,6 +304,28 @@
     box-sizing: border-box;
     span {
       font-style: italic;
+    }
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .btn-flat {
+    display: block;
+    width: 70%;
+    margin-right: 0;
+    margin: 0 auto 1rem !important;
+  }
+  .main .banner.bountysource {
+    margin-top: 0px;
+    .flag {
+      line-height: 1.3;
+      border-radius: 0px;
+      padding: 6px 25px;
+      white-space: normal;
+      display: block;
+      &:before {
+        display: none;
+      }
     }
   }
 }
